# stereo_recorder

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  package.xml  stereo_alpha_rt  stereo_alpha_rt.project  stereo_alpha_rt.workspace  terminal.sh
Source/: stereo_alpha_rt.cpp
include/: Bumblebee_RT.h  stereocore_RT.h
lib/: fc2triclops.h
source/: stereo_alpha_rt.cpp  stereocore_rt.cpp
src/: stereo_alpha_rt.cpp
